# langchain_example

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
docs/: funny_birthday_letter_brother.txt
src/: A0_model_without_langchain.py  A10_tools.py  A1_model_with_langchain.py  A2_chains.py  A4_langGraph_alura.py  A5_bot_without_mem_langchain.py  A5_conditional_edge.py  A7_langGraph_reAct.md  A7_langGraph_reAct.py  A8_draft_project.py  A9_RAG.py  basic_chat.md  basic_chat.py  chains.md  chains.py  model_with_langchain.py  model_without_langchain.py
src/rag/openai/: config.py  embedding.py  graph.py  main.py  models.py  nodes.py  tools.py
src/rag/openai/db/: chroma.sqlite3
