[project]
name = "langchain-example"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "leandroTorres",email = "leandrohenrique_@live.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "openai (>=2.21.0,<3.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ipython (>=9.10.0,<10.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pypdf (>=6.7.5,<7.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "isort (>=8.0.0,<9.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude folders that shouldn't be formatted
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

